still working on it

--- a/index.html
+++ b/index.html
@@ -14,6 +14,45 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <h1>India Houston's Web Development Resume</h1>
+
+  
+    <nav>
+      <a href="#">Home</a>
+       <a href="#">About India</a>
+       <a href="#">India's Portfolio</a>
+       <a href="#">Connect with India</a>
+
+
+    </nav>
+
+   <img src="me-in-real-lyfe.jpg" alt="india">
+
+   <div class="top-content">
+
+    <div class="about-india">
+
+      <p>I was am orginally from Boston, Massachusetts but have been living in Atlanta
+        Georgia for over 10 years. I have always been very interested in computers.
+        I wanted to know all the inside moving parts and how they worked so I started
+        out doing basic maintenance on them. I then began to have an interest in webpages,
+        I wanted to know how all the parts of a webpage or website were made,
+         how they existed,and functioned. This is how my interest in web development began; 
+         I started trying to teach myself HTML and CSS. Although I grasped some very basic concepts, I wanted
+        delve deeper and I decided to attend Lambda School.</p>
+      
+
+
+    </div>
+
+
+
+
+
+   </div>
+
+
+
+
 </body>
 </html>
